# rescontre-SDK

./: .gitignore  README.md  demo.py  pyproject.toml
examples/: demo_client.py  demo_server.py
rescontre/: __init__.py  client.py  errors.py  models.py
scripts/: run_quickstart.py
tests/: test_smoke.py
