[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rescontre"
version = "0.1.0"
description = "Python SDK for Rescontre, a clearinghouse for agent-to-agent payments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rescontre" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/Jungyoonlim/Rescontre"

[tool.hatch.build.targets.wheel]
packages = ["rescontre"]
